<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.axel.ptop.MainActivity">


    <include layout="@layout/auth_logo"
        android:layout_above="@+id/registerFormContainer"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <LinearLayout
        style="@style/authContainer"
        android:id="@+id/registerFormContainer">


        <EditText
            style="@style/authEditText"
            android:id="@+id/emailEt"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"/>
        <EditText
            style="@style/authEditText"
            android:id="@+id/passwordEt"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"/>
        <EditText

            style="@style/authEditText"
            android:id="@+id/confirmPasswordEt"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/registerBtn"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/signinTv"
            android:text="@string/already_registered"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
