<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.axel.ptop.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <include layout="@layout/auth_logo" />

        <LinearLayout
            android:id="@+id/loginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/auth_vertical_margin"
            android:layout_marginLeft="@dimen/auth_vertical_margin"
            android:layout_marginRight="@dimen/auth_vertical_margin"
            android:layout_marginStart="@dimen/auth_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/welcomeSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/thanks"
                android:textColor="@color/lightGray"
                android:textSize="14sp"
                android:singleLine="true"/>

            <EditText
                style="@style/authEditText"
                android:id="@+id/emailEt"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"/>

            <EditText
                style="@style/authEditText"
                android:id="@+id/passwordEt"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:text="@string/common_signin_button_text" />

            <TextView
                android:id="@+id/forgotPasswordTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/lightGray" />

        </LinearLayout>

        <TextView
            android:id="@+id/signupTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/not_have"
            android:textColor="@color/lightGray"
            android:layout_below="@+id/loginFormContainer"
            android:layout_marginTop="@dimen/auth_vertical_margin"/>

    </RelativeLayout>
</RelativeLayout>
