<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.axel.ptop.ForgotPasswordActivity">

    <include layout="@layout/top_bar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBarRl"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgotPasswordInsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordIns"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/lightGray"
            android:textSize="17sp"/>

        <EditText
            style="@style/authEditText"
            android:id="@+id/emailEt"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/auth_vertical_margin"
            />
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm" />

    </LinearLayout>




</RelativeLayout>
